Implimenting new UI design in fields, sign in and register layouts

--- a/app/src/main/res/layout/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout/activity_crop_field_manager.xml
@@ -48,9 +48,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/field_name"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
 
             <EditText
@@ -79,10 +78,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Field Type"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_type"
@@ -92,9 +96,10 @@
                 android:ems="10"
                 android:hint="Enter.."
                 android:entries="@array/crop_field_type"
-                android:background="@drawable/input_shapes"
                 android:textSize="14sp"
+                style="@style/spinnerStyle"
                 />
+            </LinearLayout>
 
         </LinearLayout>
         <LinearLayout
@@ -109,10 +114,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Layout Type"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
+
 
             <Spinner
                 android:id="@+id/sp_crop_field_layout_type"
@@ -122,10 +133,9 @@
                 android:ems="10"
                 android:hint="Enter.."
                 android:entries="@array/crop_field_layout_type"
-                android:background="@drawable/input_shapes"
                 android:textSize="14sp"
                 />
-
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -139,10 +149,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="Status"
-                android:textStyle="bold"
                 android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_status"
@@ -152,10 +167,9 @@
                 android:ems="10"
                 android:hint="Enter.."
                 android:entries="@array/crop_field_status"
-                android:background="@drawable/input_shapes"
                 android:textSize="14sp"
                 />
-
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -169,10 +183,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/soil_category"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
                 android:layout_weight="0.5"
                 android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_soil_category"
@@ -180,11 +199,10 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:layout_weight="0.5"
-                android:background="@drawable/input_shapes"
-                android:entries="@array/crop_field_soil_category"
+                 android:entries="@array/crop_field_soil_category"
                 />
 
-
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -200,9 +218,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/soil_type"
                 android:layout_weight="0.6"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
                 android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
 
@@ -212,12 +236,8 @@
                 android:layout_weight="0.4"
                 android:textSize="14sp"
                 android:entries="@array/crop_field_soil_type"
-
-                android:background="@drawable/input_shapes"
-
-
-                />
-
+             />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -232,9 +252,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/watercourse"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textColor="@color/textColor"
+                android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_watercourse"
@@ -243,9 +268,8 @@
                 android:layout_weight="0.5"
                 android:textSize="14sp"
                 android:entries="@array/crop_field_watercourse"
-                android:background="@drawable/input_shapes"
                 />
-
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -264,8 +288,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/total_area"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
                 android:textSize="16sp"
                 android:layout_marginRight="5dp"
                 />
@@ -294,8 +317,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/croppable_area"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
                 android:textSize="16sp" />
 
             <EditText
@@ -324,9 +346,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/units"
                 android:layout_weight="0.5"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textColor="@color/textColor"
                 android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
 
             <Spinner
                 android:id="@+id/sp_crop_field_units"
@@ -335,11 +362,8 @@
                 android:entries="@array/crop_field_units"
                 android:textSize="14sp"
                 android:inputType="numberDecimal"
-
-                android:background="@drawable/input_shapes"
-
-                />
-
+              />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -353,10 +377,9 @@
 
         <Button
             android:id="@+id/btn_save"
-            style="@style/Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
+            android:backgroundTint="@color/buttonColor"
             android:drawableTint="#ffffff"
             android:text="Save "
             android:textAllCaps="false"
