--- a/app/src/main/res/drawable/input_shapes_grey.xml
+++ b/app/src/main/res/drawable/input_shapes_grey.xml
@@ -2,22 +2,24 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/caldroid_darker_gray" />
+            <solid android:color="@color/gray_gray" />
+
             <padding
-                android:bottom="2dp"
-                android:left="2dp"
-                android:right="2dp"
-                android:top="2dp" />
+                android:bottom="1dp"
+                android:left="1dp"
+                android:right="1dp"
+                android:top="1dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle" >
+
             <padding
-                android:bottom="5dp"
-                android:left="5dp"
-                android:right="5dp"
-                android:top="5dp" />
-            <solid android:color="@color/caldroid_darker_gray" />
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
+            <solid android:color="@color/gray_gray" />
 
 
         </shape>
