--- a/app/src/main/res/drawable/input_shapes_grey_spinner.xml
+++ b/app/src/main/res/drawable/input_shapes_grey_spinner.xml
@@ -2,7 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/gray_gray" />
+            <solid android:color="@color/gray_spinner" />
+
             <padding
                 android:bottom="1dp"
                 android:left="1dp"
@@ -13,11 +14,12 @@
     <item>
         <shape android:shape="rectangle" >
             <padding
-                android:bottom="5dp"
-                android:left="5dp"
-                android:right="5dp"
-                android:top="5dp" />
-            <solid android:color="#ffffff" />
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
+            <solid android:color="@color/gray_spinner_border" />
+
 
 
         </shape>
