--- a/app/src/main/res/layout/crop_harvest_list_card.xml
+++ b/app/src/main/res/layout/crop_harvest_list_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/gray">
     <LinearLayout
@@ -121,6 +121,7 @@
                         android:id="@+id/txt_view_crop_harvest_card_method"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/blackText"
                         android:text="Hand Picking"/>
 
                 </LinearLayout>
