--- a/app/src/main/res/layout/crop_scouting_list_card.xml
+++ b/app/src/main/res/layout/crop_scouting_list_card.xml
@@ -121,7 +121,8 @@
                         android:layout_width="wrap_content"
                         android:layout_weight="0.5"
                         android:layout_height="wrap_content"
-                        android:text="(Visual Observation)"/>
+                        android:textColor="@color/blackText"
+                        android:text="Visual Observation"/>
 
 
                 </LinearLayout>
