--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#34463F</item>
     </style>
 
 
@@ -89,5 +89,6 @@
     <style name="spinnerStyle" parent="@android:style/Widget.TextView.SpinnerItem">
         <item name="android:padding">1sp</item>
         <item name="android:layout_margin">1sp</item>
+        <item name="android:textColor">#34463F</item>
     </style>
 </resources>
